# agent-trading-sdk

./: .gitignore  README.md  pyproject.toml  setup.py  test_integrations.py
arthur/: __init__.py  auth.py  cli.py  client.py  exceptions.py  strategies.py
arthur_sdk/: __init__.py  agent.py  auth.py  batch.py  cli.py  client.py  events.py  market_maker.py  portfolio.py  strategies.py  ws_market_maker.py
docs/: agent-integrations.md
examples/: ai_agent.py  ai_agent_integrations.py  basic_trading.py  grid_trading.py  hello_world.py  momentum_strategy.py  portfolio_rebalance.py  rsi_strategy.py  withdrawal.py
orderly_agent/: __init__.py  client.py  exceptions.py  market_maker.py  mm_runner.py  strategies.py
orderly_agent/integrations/: README.md  __init__.py  _client.py  _format.py  autogen.py  crewai.py  langchain.py
scripts/: migrate_to_arthur.py
