[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "arthur-sdk"
version = "0.3.0"
description = "Simple trading for AI agents on Arthur DEX / Orderly Network"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Arthur DEX", email = "arthur.orderly@proton.me" }
]
keywords = [
    "trading",
    "ai-agent",
    "perps",
    "defi",
    "orderly",
    "arthur",
    "crypto",
    "bot",
    "market-maker",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pynacl>=1.5.0,<2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "black>=23.0",
    "mypy>=1.0",
    "ruff>=0.1.0",
]
strategies = [
    "pandas>=2.0",
    "numpy>=1.24",
]
realtime = [
    "websockets>=12.0",
]

[project.urls]
Homepage = "https://arthurdex.com"
Documentation = "https://arthurdex.com/docs"
Repository = "https://github.com/arthur-orderly/arthur-sdk"
Issues = "https://github.com/arthur-orderly/arthur-sdk/issues"
Changelog = "https://github.com/arthur-orderly/arthur-sdk/blob/main/CHANGELOG.md"

[project.scripts]
arthur = "arthur_sdk.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["arthur_sdk"]

[tool.hatch.build.targets.sdist]
include = [
    "/arthur_sdk",
    "/README.md",
    "/LICENSE",
]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
